# src/application/modules/medical-procedures/controllers/dtos/generate-financial-report-by-doctor-input.dto.ts
@@ -1,0 +1,20 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { Type } from 'class-transformer';
+import { IsDate, IsOptional, IsString } from 'class-validator';
+
+export class GenerateFinancialReportByDoctorInputDto {
+  @ApiProperty({ description: 'Data de início do relatório.' })
+  @IsDate()
+  @Type(() => Date)
+  startDate: Date;
+
+  @ApiProperty({ description: 'Data de fim do relatório.' })
+  @IsDate()
+  @Type(() => Date)
+  endDate: Date;
+
+  @ApiProperty({ required: false, description: 'ID do médico para filtrar o relatório (opcional).' })
+  @IsOptional()
+  @IsString()
+  doctorId?: string;
+}
