# src/domain/medical-procedure/usecases/dtos/generate-denied-report-by-period-input.dto.ts
@@ -1,0 +1,4 @@
+export interface GenerateDeniedReportByPeriodInputDto {
+  startDate: Date;
+  endDate: Date;
+}
